syntax = "proto3";

package rssflow.registry;

// Metadata for a node service
message Node {
  string address = 1;
  string node_name = 3;
}

// Request to register a node
message RegisterRequest {
  Node node = 1;
}

// Empty response
message Empty {}

// Request to get a node by name
message GetNodeRequest {
  string name = 1;
}

// Response with a single node
message GetNodeResponse {
  Node node = 1;
}

// Response with all nodes
message ListNodesResponse {
  repeated Node nodes = 1;
}

// Heartbeat message
message HeartbeatRequest {
  string service = 1;
}

service NodeRegistry {
  // Register a new node (or update existing one)
  rpc Register(RegisterRequest) returns (Empty);

  // Send heartbeat to indicate liveness
  rpc Heartbeat(HeartbeatRequest) returns (Empty);

  // Get details for a single node
  rpc GetNode(GetNodeRequest) returns (GetNodeResponse);

  // List all active plugins
  rpc ListNodes(Empty) returns (ListNodesResponse);
}
